# Zota_Project

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: Zota-multi-platform.yml
Client/: CMakeLists.txt  program.cpp  program.h  widget.cpp  widget.h  widget.ui
Google_Test/: CMakeLists.txt  stringprocessor_test.cpp
Server/: CMakeLists.txt  server.cpp
lib/: filelogger.cpp  filelogger.h  mathformulajsonconverter.cpp  mathformulajsonconverter.h  networkconnector.cpp  networkconnector.h  stringprocessor.cpp  stringprocessor.h
